--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "ts-node": "^10.9.2"
   },
